added profile page showing all the stars user gave away

--- a/app/views/bitbucket/descriptor.json.erb
+++ b/app/views/bitbucket/descriptor.json.erb
@@ -27,6 +27,15 @@
           "location": "org.bitbucket.repository.overview.informationPanel",
           "key": "stars-web-panel"
         }
+      ],
+      "profileTab": [
+        {
+          "url": "/all-stars",
+          "name": {
+            "value": "Your stars"
+          },
+          "key": "all-stars"
+        }
       ]
     },
     "vendor": {
