added oauthConsumer to the descriptor, storing keys using secrets

--- a/app/views/bitbucket/descriptor.json.erb
+++ b/app/views/bitbucket/descriptor.json.erb
@@ -18,6 +18,9 @@
         "uninstalled": "/uninstalled"
     },
     "modules": {
+      "oauthConsumer": {
+        "clientId": "<%= client_id %>"
+      },
       "webPanel": [
         {
           "url": "/stars?repoPath={repo_path}",
