more meaningful description

--- a/app/views/bitbucket/descriptor.json.erb
+++ b/app/views/bitbucket/descriptor.json.erb
@@ -6,7 +6,7 @@
     "contexts": [
         "personal"
     ],
-    "description": "Blah blah blah",
+    "description": "Discover and keep track of your favorite repos with Stars for BitBucket!",
     "key": "<%= plugin_key %>",
     "name": "Stars for BitBucket",
     "scopes": [
