name of the plugin is dynamic (different in development)

--- a/app/views/bitbucket/descriptor.json.erb
+++ b/app/views/bitbucket/descriptor.json.erb
@@ -8,7 +8,7 @@
     ],
     "description": "Discover and keep track of your favorite repos with Stars for BitBucket!",
     "key": "<%= plugin_key %>",
-    "name": "Stars for BitBucket",
+    "name": "<%= plugin_name %>",
     "scopes": [
         "account",
         "repository"
