added analytics (just page views for now)

--- a/app/views/all_stars/show.html.haml
+++ b/app/views/all_stars/show.html.haml
@@ -32,6 +32,8 @@
         });
       });
 
+    = render 'analytics'
+
   %body
     #content{rel: 'main', style: 'background: #fff; padding: 5px;'}
       - repos.each do |repo|
