--- a/app/views/stars/show.html.haml
+++ b/app/views/stars/show.html.haml
@@ -8,6 +8,7 @@
     %script{:src => '//aui-cdn.atlassian.com/aui-adg/5.9.19/js/aui.min.js'}
     %meta{name: 'token', content: session_token}
 
+    = render 'analytics'
   %body
     :css
       .star-panel .aui-button {
